--- a/Notas desde otro servidor/styles.css
+++ b/Notas desde otro servidor/styles.css
@@ -17,7 +17,7 @@ body {
 }
 .materia .nota {
   flex-basis: 20px;
-  background-color: #ddd;  
+  background-color: #888;  
   font-weight: 700;
 }
 .materia .nombre {
